提交一部分把

--- a/Linux/基础篇.md
+++ b/Linux/基础篇.md
@@ -169,13 +169,47 @@ systemctl start/stop/restart/status 服务名
 - ctrl+l  清屏
 - tab     提示
 ## 文件目录类
-### pwd  显示当前工作目录的绝对路径
-#### 基本语法
-> pwd
+- pwd   显示当前工作目录的绝对路径
+- ls    列出目录的内容
+- cd    切换目录
+- mkdir 创建目录
+- rmdir 删除空目录
+- touch 创建空文件
+- cp    复制文件或目录
+- rm    删除文件或目录
+- mv    移动文件或目录
+- cat   查看文件内容 
+- more  文件内容分屏查看器 直接全部打开
+- less  分屏显示文件内容  相当于分页加载   pagedown up 上下页  /关键字 向下找 ?向上找 n下一个N上一个
+- echo  输出内容到控制台  "双引号包裹内容"  带上转义字符的话需要加选项-e
+- 输出内容到文件 >  追加内容到文件 >>
+- head  显示文件头部内容   -n 行数  文件 指定文件
+- tail  输出文件尾部内容   -n 行数  -f 实时追踪文件更新
+- ln    软连接  ls-s 原文件/目录  软连接名    rm -rf 名/会删除真实目录的数据   rm -rf 名不会
+- history  查看已经执行过的历史命令
 
-### ls 列出目录的内容
 ## 时间日期类
+- 显示当前时间  date  按照格式输出 "+%Y-%m-%d %H:%M:%S" 一定要带加号
+- 显示非当前时间   -d 参数 "1 days ago" 显示前一天时间 before
+- 设置系统时间  -s "时间"  调乱了 之后 用 ntpdate 命令重新获取当前正确时间  一般没有必要该
+- cal显示日历   ubuntu 默认没安装
 ## 用户管理命令
+### useradd
+``` shell
+useradd  用户名
+useradd -g 组名 用户名
+
+```
+
+### passwd
+### id 
+### cat /etc/passwd
+### su
+#### userdel
+#### who  查看登录用户信息
+### sudo
+### usermod 修改用户
+
 ## 用户组管理命令
 ## 文件权限类
 ## 搜索查找类
