增加权限类学习

--- a/Linux/基础篇.md
+++ b/Linux/基础篇.md
@@ -198,22 +198,69 @@ systemctl start/stop/restart/status 服务名
 ``` shell
 useradd  用户名
 useradd -g 组名 用户名
+useradd -d 指定用户目录
 
+# ubuntu系统添加用户 直接adduser 即可
+```
+### passwd 更改用户的密码
+``` shell
+passwd 用户名
 ```
 
-### passwd
-### id 
-### cat /etc/passwd
+### id  查看用户是否存在
+``` shell
+id 用户名
+```
+### cat /etc/passwd  查看当前系统所有用户
 ### su
+```
+su 用户名 切换用户  switch user
+```
 #### userdel
-#### who  查看登录用户信息
-### sudo
-### usermod 修改用户
+#### who  查看登录用户信息 
+``` shell
+who  三种用法
+whoami   可以被su切换
+who am i  显示登录源头
 
+```
+### sudo 使普通用户具有root权限
+``` shell
+如果不能使用sudo  需要去 /etc/sudoers 中加配置文件 copy root的设置即可
+不想反复输入 sudo 密码  加上 NOPASSWD: ALL
+```
+### usermod 修改用户
+``` shell
+usermod -g 组名 用户名
+```
 ## 用户组管理命令
+### groupadd 新建组
+### groupdel 删除
+### groupmod 修改
+### cat /etc/group 查看组
 ## 文件权限类
+### 文件属性
+``` shell
+
+文件类型  属主权限  属组权限  其他用户权限
+
+r w x
+作用到文件 读 写 执行
+作用到目录 读取 修改(创建/删除/重命名)  可执行(进入目录)
+```
+### chmod 改变权限
+```
+chmod [u/g/o/a] [+/-/=] [rwx] 文件/目录
+chmod [mode=421] 文件/目录    目录的话需要 带-R参数
+r=4 w=2 x=1
+```
+### chown 改变所有者
+```
+chown [选项/-R] [用户] 文件/目录
+```
+### chgrp 改变所属组
 ## 搜索查找类
-## 亚索和解压类
+## 压缩和解压类
 ## 磁盘分区类
 ## 进程线程类
 ## crontab 系统定时任务
